@@ -1,5 +1,7 @@
 Changes since 0.1.12:
 
+* Support compiling with older Linux 2.4.18 kernels (Joachim Kupke).
+
 * New /bin/0run program to be used in scripts, eg:
 	#!/bin/0run example.com/myprog 2003-01-01
 
